@@ -2,7 +2,7 @@
 org.gradle.jvmargs=-Xmx2G
 # Mod Properties
 mod_id=mmorpg
-mod_version=5.9.30
+mod_version=5.9.31
 maven_group=net.fabricmc
 mod_archive_name=Mine_and_Slash
 minecraft_version=1.20.1
